src/objects/SAFE_Answers__c.object
<CustomObject>
    <fields>
        <fullName>SAFE_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAFE_Question__c</fullName>
        <label>Question</label>
        <referenceTo>SAFE_Questions__c</referenceTo>
        <relationshipLabel>SAFE Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SAFE_Score_Value__c</fullName>
        <label>Score Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SAFE Answers</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SAFE_Question__c</columns>
        <columns>SAFE_Score_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Answer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAFE Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SAFE_IsScoreValueEmpty</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(SAFE_Score_Value__c)</errorConditionFormula>
        <errorDisplayField>SAFE_Score_Value__c</errorDisplayField>
        <errorMessage>Please enter the score value. There should be a score value corresponding to every answer.</errorMessage>
    </validationRules>
</CustomObject>